# jznoir

./: CMakeLists.txt  qml.qrc
include/: AudioEngine.h  HistoryManager.h  LibraryManager.h  LibraryScanner.h  MetadataReader.h  QueueManager.h  SortProxyModel.h  Track.h  TracksModel.h  metadata.h
qml/: AddToPlaylistPopup.qml  AlbumMenu.qml  AlbumsView.qml  ArtistFocusView.qml  ArtistsView.qml  DeleteConfirm.qml  DirectoryManager.qml  GenresView.qml  HeaderButton.qml  LibraryModel.qml  Main.qml  NavigationManager.js  NewPlaylistPopup.qml  PlayerFooter.qml  PlayerUI.qml  PlaylistsView.qml  QueueModel.qml  QueuePopup.qml  SearchView.qml  SettingsView.qml  ShortcutHandler.qml  Theme.qml  TrackMenu.qml  TracksView.qml
src/: AudioEngine.cpp  HistoryManager.cpp  LibraryManager.cpp  LibraryScanner.cpp  MetadataReader.cpp  QueueManager.cpp  SortProxyModel.cpp  TracksModel.cpp  main.cpp
